# timeseries_algorithm

./: .gitignore  main.py  pyproject.toml
analysis/: backtest.py  clustering.py  correlation.py  covariate_analysis.py  cross_validation.py  outlier_detection.py  residual_analysis.py
src/timeseries_algorithm/data/: dataset.py
src/timeseries_algorithm/features/: create_features.py
src/timeseries_algorithm/models/: base_model.py
src/timeseries_algorithm/models/arima/: arima.py  sarima.py
src/timeseries_algorithm/utils/: logging.py  metrics.py
tests/: __init__.py
tests/test_analysis/: test_analysis.py
tests/test_data/: test_dataloader.py
tests/test_timeseries_algorithm/test_data/: test_dataloader.py  test_dataset.py
tests/test_timeseries_algorithm/test_features/: test_create_features.py
tests/test_visualization/: test_visualization.py
timeseries_algorithm/: __init__.py
timeseries_algorithm/data/: dataloader.py  dataset.py
timeseries_algorithm/features/: create_features.py
timeseries_algorithm/models/: arch_model.py  arima_model.py  bats_mode.py  ets_model.py  gradient_boosting_model.py  ktr_model.py  lstm_model.py  oned_cnn_model.py  orbit_model.py  prophet_model.py  rnn_model.py  seq2seq_model.py  state_space.py  state_space_model.py  tcn_model.py  theta_model.py  var.py  var_model.py  wavenet_model.py
timeseries_algorithm/models/arima/: auto_arima.py
visualization/: plot_backtest.py  plot_clustering.py  plot_correlation.py  plot_covariate_influence.py  plot_outliers.py  plot_residuals.py
