[project]
name = "timeseries-algorithm"
version = "0.1.0"
description = "timeseries algorithm wrapper tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.0",
    "statsmodels>=0.14.4",
    "prophet>=1.1.6",
    "xgboost>=2.1.3",
    "lightgbm>=4.5.0",
    "torch>=2.5.1",
    "mlflow>=2.19.0",
    "pmdarima>=2.0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.5",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
]
